==> amir1387aht/hk_watchs_hack/customer/boards/eh-ss6600xxx/drv_io.c <==
#include "bsp_board.h"
#include "drv_io.h"
    #include "pmic_controller.h"
#define LCD_BACKLIGHT_POWER     (70)      // GPIO_A70
#define LCD_BOARD_POWER_PIN     (55)      // GPIO_A55
#define LCD_RESET_PIN           (78)      // GPIO_A78
#define TP_RESET_PIN            (47)      // GPIO_A47
#define QSPI_POWER_PIN          (58)      // GPIO_A58
#define QSPI2_CLK_PIN           (60)      // GPIO_A60
#define MOTOR_POWER_PIN         (44)      // GPIO_A44
#define MOTOR_PWM_PIN           (45)      // GPIO_A45
    #define DEBUG_PRINTF(...)   LOG_I(__VA_ARGS__)
    #define DEBUG_PRINTF(...)
    #define LXT_LP_CYCLE 200
    #define IS_HCPU     1
    #define PAD_BASE    PAD_PA00
    #define GPIO_BASE   GPIO_A0
    #define HWP         hwp_gpio1
    #define IS_HCPU     0
    #define PAD_BASE    PAD_PB00
    #define GPIO_BASE   GPIO_B0
    #define HWP         hwp_gpio2
#define OUTPUT_0(pin_num) \
    do \
    { \
        HAL_PIN_Set(PAD_BASE + pin_num , GPIO_BASE + pin_num, PIN_NOPULL, IS_HCPU); \
        HAL_PIN_SetMode(PAD_BASE + pin_num, IS_HCPU, PIN_DIGITAL_O_NORMAL); \
        BSP_GPIO_Set(pin_num, 0, IS_HCPU); \
    } while(0)
#define INPUT_Z(pin_num) \
    do \
    { \
        HAL_GPIO_DeInit(HWP, pin_num); \
        HAL_PIN_Set(PAD_BASE + pin_num, GPIO_BASE + pin_num, PIN_NOPULL, IS_HCPU); \
        HAL_PIN_SetMode(PAD_BASE + pin_num, IS_HCPU, PIN_ANALOG_INPUT); \
        HAL_GPIO_DeInit(HWP, pin_num); \
    } while(0)

void HAL_PreInit(void)
{
#ifdef SOC_BF0_HCPU
    // To avoid somebody cancel request.
    HAL_HPAON_EnableXT48();

    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_UART1, RCC_CLK_USART_HXT48);

    if (PM_STANDBY_BOOT != SystemPowerOnModeGet()) // Except Standby mode, all other mode need to re-init
    {
        // Halt LCPU first to avoid LCPU in running state
        HAL_HPAON_WakeCore(CORE_ID_LCPU);
        HAL_RCC_Reset_and_Halt_LCPU(1);
#ifdef BSP_USING_SPI_FLASH
        {
            // if not define EFUSE CONFIG or efuse configure read fail, check flash otp configure
            BSP_System_Config();
        }
#endif

        HAL_PMU_EnableDLL(1);
        // disable it when ATE?
        HAL_PMU_SWITCH_VRET_LOWER();

        HAL_HPAON_StartGTimer();
#ifdef LXT_DISABLE
        HAL_PMU_LpCLockSelect(PMU_LPCLK_RC10);
        MODIFY_REG(hwp_pmuc->LRC_CR, PMUC_LRC_CR_CMPBM1_Msk, 3 << PMUC_LRC_CR_CMPBM1_Pos);
        MODIFY_REG(hwp_pmuc->LRC_CR, PMUC_LRC_CR_CMPBM2_Msk, 1 << PMUC_LRC_CR_CMPBM2_Pos);
#else
        HAL_PMU_LpCLockSelect(PMU_LPCLK_XT32);
#endif
        //HAL_PMU_SET_HPSYS_LDO_VREF(0xB);

        HAL_PMU_SET_HPSYS_LDO_VREF2(0);

#ifndef PM_USE_RC48
        /* Configure in LCPU. */
        HAL_LPAON_EnableXT48();

        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
#endif /* !PM_USE_RC48 */

        HAL_RCC_LCPU_SetDiv(1, 1, 3);

#ifndef PM_USE_RC48
        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HXT48);
        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HXT48);
#else
        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HRC48);
        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HRC48);
#endif /* !PM_USE_RC48 */

        if (HAL_PMU_LXT_DISABLED())
        {
            LRC_init();
        }
    }

    HAL_RCC_HCPU_SetDiv(1, 2, 5);

    flash1_div = 1;
    flash2_div = 4;
    //HAL_QSPI_ENABLE_WDT();

#if 1
    HAL_RCC_HCPU_EnableDLL2(96000000);

    // delayed version of Rx sample en set to 0x6
    // delayed version of Rx clock set to 0x6
    //hwp_qspi1->MISCR = 0x36;
    HAL_QSPI_SET_RXDELAY(0, 6, 6);
    HAL_QSPI_SET_RXDELAY(1, 6, 6);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH1, RCC_CLK_SRC_DLL2);
#endif

    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
    HAL_RCC_HCPU_EnableDLL1(240000000);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_DLL1);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH2, RCC_CLK_MOD_SYS);

    // Reset sysclk used by HAL_Delay_us
    HAL_Delay_us(0);

    /* Init the low level hardware */
    HAL_MspInit();

#if defined (BSP_USING_PSRAM)
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_PSRAM, RCC_CLK_PSRAM_SYSCLK);
    // TODO: rt_psram_init is dependent on RT-Thread. change to RTOS independent.
    extern int rt_psram_init(void);
    rt_psram_init();
#endif

#elif defined(SOC_BF0_LCPU)

#ifndef PM_USE_RC48
    HAL_LPAON_EnableXT48();
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HXT48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HXT48);
#else
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HRC48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HRC48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HRC48);
    HAL_LPAON_DisableXT48();
#endif /* !PM_USE_RC48 */

    HAL_RCC_LCPU_SetDiv(1, 1, 3);

    if (HAL_PMU_LXT_DISABLED() && PM_STANDBY_BOOT != SystemPowerOnModeGet())
    {
        HAL_RC_CAL_update_reference_cycle_on_48M(LXT_LP_CYCLE);
    }

    HAL_MspInit();

#endif
}

void BSP_TP_PowerUp(void)
{
#ifdef PMIC_CTRL_ENABLE
    rt_base_t level;
    level = rt_hw_interrupt_disable();
    g_lcd_tp_power++;
    rt_hw_interrupt_enable(level);
#endif
    HAL_PIN_SetMode(PAD_PA10, IS_HCPU, PIN_DIGITAL_IO_NORMAL);
    HAL_PIN_SetMode(PAD_PA14, IS_HCPU, PIN_DIGITAL_IO_NORMAL);
    HAL_PIN_SetMode(PAD_PA79, IS_HCPU, PIN_DIGITAL_IO_NORMAL);

    HAL_PIN_Set(PAD_PA10, I2C1_SCL, PIN_PULLUP, 1);             // I2C1 scl, touch screen
    HAL_PIN_Set(PAD_PA14, I2C1_SDA, PIN_PULLUP, 1);             // I2C1 sda, touch screen

    BSP_GPIO_Set(TP_RESET_PIN, 1, 1);
}

void BSP_TP_PowerDown(void)
{
#ifdef PMIC_CTRL_ENABLE
    rt_base_t level;
    uint16_t  cnt;
    level = rt_hw_interrupt_disable();
    cnt = g_lcd_tp_power;
    if (g_lcd_tp_power > 0)
        g_lcd_tp_power--;
    rt_hw_interrupt_enable(level);
    if (1 == cnt)
        pmic_device_control(PMIC_OUT_1V8_LVSW100_4 | PMIC_OUT_LDO33_VOUT, 0, 1);
#endif
    BSP_GPIO_Set(TP_RESET_PIN, 0, 1);
    //TP_INT
    INPUT_Z(79);
#if 1
    INPUT_Z(10);    // I2C1 scl, touch screen
    INPUT_Z(14);    // I2C1 sda, touch screen
#else
    HAL_PIN_Set(PAD_PA10, I2C1_SCL, PIN_PULLDOWN, 1);             // I2C1 scl, touch screen
    HAL_PIN_Set(PAD_PA14, I2C1_SDA, PIN_PULLDOWN, 1);             // I2C1 sda, touch screen
#endif

}

void BSP_QSPI_PowerUp(void)
{
#ifndef PMIC_CTRL_ENABLE
    BSP_GPIO_Set(QSPI_POWER_PIN, 1, 1);
#endif
    HAL_PIN_Set(PAD_PA60, QSPI2_CLK, PIN_NOPULL, 1);
}

void BSP_QSPI_PowerDown(void)
{
#ifdef BSP_ENABLE_QSPI2
    FLASH_HandleTypeDef hflash2;
    hflash2.Instance = FLASH2;
    HAL_FLASH_DEEP_PWRDOWN(&hflash2);
#endif
#if 0 //def BSP_ENABLE_QSPI1
    FLASH_HandleTypeDef hflash1;
    hflash1.Instance = FLASH1;
    HAL_FLASH_DEEP_PWRDOWN(&hflash1);
#endif
    // wait tDP
    HAL_Delay_us(3);

    OUTPUT_0(60); //qspi clk
    OUTPUT_0(61); //qspi cs

    //input pull down
    HAL_PIN_Set(PAD_PA63, QSPI2_DIO0, PIN_PULLDOWN, 1);
    HAL_PIN_Set(PAD_PA65, QSPI2_DIO1, PIN_PULLDOWN, 1);
    HAL_PIN_Set(PAD_PA66, QSPI2_DIO2, PIN_PULLDOWN, 1);
    HAL_PIN_Set(PAD_PA68, QSPI2_DIO3, PIN_PULLDOWN, 1);
#ifdef PMIC_CTRL_ENABLE
    pmic_device_control(PMIC_OUT_1V8_LVSW100_1, 0, 1);
#else
#ifndef HDK_U4O5
    /* for U4O5, SIP PSRAM is also controlled by PA58, it cannot be powered down */
    // OUTPUT_0(58); //QSPI2_EN norflash
#endif /* HDK_U4O5 */
#endif
}

void BSP_IO_Power_Down(int coreid, bool is_deep_sleep)
{
    int i;
#ifdef SOC_BF0_HCPU
    if (coreid == CORE_ID_HCPU)
    {

        BSP_QSPI_PowerDown();
        BSP_LCD_PowerDown();
        BSP_TP_PowerDown();
        BSP_OTHER_PowerDown();
        if (is_deep_sleep)
        {
#if defined (BSP_USING_PSRAM)
            extern int rt_psram_enter_low_power(char *name);
            rt_psram_enter_low_power("psram0");
#endif
        }

    }
#else
    BSP_OTHER_PowerDown();
#endif
}
