==> amir1387aht/hk_watchs_hack/customer/boards/ec-lb557xxx/drv_io.c <==
#include "board.h"
#include "string.h"
#include "rtconfig.h"
    #include "drv_common.h"
    #include "drv_psram.h"
    #include "drv_flash.h"
    #include "log.h"
#include "drv_io.h"
#include "bf0_sys_cfg.h"
    #include "bf0_hal_dsi.h"
    #define DEBUG_PRINTF(...)   LOG_I(__VA_ARGS__)
    #define DEBUG_PRINTF(...)
    #define LXT_LP_CYCLE 200
#define LCD_BOARD_POWER_PIN     (38)      // GPIO_B38
#define QSPI2_CLK_PIN           (60)      // GPIO_A60
#define LCD_RESET_PIN           (17)      // GPIO_B17
#define TP_RESET_PIN            (0)       // GPIO_A00
#define TP_EN_PIN               (3)       // GPIO_A06
#define QSPI3_POWER_PIN         (41)      // GPIO_A60
#define QSPI_POWER_PIN          (58)      // GPIO_A58

void HAL_PreInit(void)
{
#ifdef SOC_BF0_HCPU
    // To avoid somebody cancel request.
    HAL_HPAON_EnableXT48();

    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_UART1, RCC_CLK_USART_HXT48);

    if (PM_STANDBY_BOOT != SystemPowerOnModeGet()) // Except Standby mode, all other mode need to re-init
    {
        // Halt LCPU first to avoid LCPU in running state
        HAL_HPAON_WakeCore(CORE_ID_LCPU);
        HAL_RCC_Reset_and_Halt_LCPU(1);
#ifdef BSP_USING_SPI_FLASH
        {
#ifndef USE_ATE_MODE
            // if not define EFUSE CONFIG or efuse configure read fail, check flash otp configure
            BSP_System_Config();
#endif
        }
#endif
        HAL_PMU_EnableDLL(1);
        // disable it when ATE?
        HAL_PMU_SWITCH_VRET_LOWER();

        HAL_HPAON_StartGTimer();
#ifdef LXT_DISABLE
        HAL_PMU_LpCLockSelect(PMU_LPCLK_RC10);
        MODIFY_REG(hwp_pmuc->LRC_CR, PMUC_LRC_CR_CMPBM1_Msk, 3 << PMUC_LRC_CR_CMPBM1_Pos);
        MODIFY_REG(hwp_pmuc->LRC_CR, PMUC_LRC_CR_CMPBM2_Msk, 1 << PMUC_LRC_CR_CMPBM2_Pos);
#else
        HAL_PMU_LpCLockSelect(PMU_LPCLK_XT32);
#endif
        //HAL_PMU_SET_HPSYS_LDO_VREF(0xB);

        HAL_PMU_SET_HPSYS_LDO_VREF2(0);

        /* Configure in LCPU. */
        HAL_LPAON_EnableXT48();

        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);

        HAL_PMU_EnableBuck2();
        HAL_PMU_SELECT_LPSYS_PWR(PMU_LPSYS_PSW_BUCK2);
        HAL_PMU_DISABLE_LPSYS_LDO();
#if 1
        HAL_RCC_LCPU_SetDiv(1, 1, 3);

        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HXT48);
        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HXT48);
        HAL_RCC_LCPU_enable2(LPSYS_RCC_ENR2_QSPI4, 1);
#endif
        if (HAL_PMU_LXT_DISABLED())
        {
            LRC_init();
        }
    }

    HAL_RCC_HCPU_SetDiv(1, 2, 5);

    flash1_div = 1;
    flash2_div = 4;
    //HAL_QSPI_ENABLE_WDT();

    HAL_RCC_HCPU_EnableDLL2(96000000);

    // delayed version of Rx sample en set to 0x6
    // delayed version of Rx clock set to 0x6
    //hwp_qspi1->MISCR = 0x36;
    HAL_QSPI_SET_RXDELAY(0, 6, 6);
    HAL_QSPI_SET_RXDELAY(1, 6, 6);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH1, RCC_CLK_SRC_DLL2);

    //HAL_RCC_HCPU_EnableDLL3(144000000);
    //HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH3, RCC_CLK_SRC_DLL3);

    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
    HAL_RCC_HCPU_EnableDLL1(240000000);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_DLL1);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH2, RCC_CLK_MOD_SYS);

    // Reset sysclk used by HAL_Delay_us
    HAL_Delay_us(0);

    /* Init the low level hardware */
    HAL_MspInit();

#if defined (BSP_USING_PSRAM)
#if defined (BSP_USING_EXT_PSRAM)
    HAL_RCC_HCPU_EnableDLL3(192000000);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_PSRAM, RCC_CLK_SRC_DLL3);
#else
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_PSRAM, RCC_CLK_PSRAM_SYSCLK);
#endif  //BSP_USING_EXT_PSRAM
    //TODO: enable it when PSRAM is available
    rt_psram_init();
#endif

#elif defined(SOC_BF0_LCPU)
    HAL_LPAON_EnableXT48();

    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HXT48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HXT48);

    HAL_RCC_LCPU_SetDiv(1, 1, 3);
    HAL_RCC_LCPU_enable2(LPSYS_RCC_ENR2_QSPI4, 1);

    if (HAL_PMU_LXT_DISABLED() && PM_STANDBY_BOOT != SystemPowerOnModeGet())
    {
        HAL_RC_CAL_update_reference_cycle_on_48M(LXT_LP_CYCLE);
    }

    HAL_MspInit();

#ifdef BSP_USING_PSRAM
    HAL_LPAON_ENABLE_PAD();
    rt_psram_init();
#endif /* BSP_USING_PSRAM */
#endif
}

void BSP_TP_PowerUp(void)
{
    BSP_GPIO_Set(TP_EN_PIN, 1, 1);  //TP_EN
#if 0
    HAL_PIN_SetMode(PAD_PA00, 1, PIN_DIGITAL_OUTPUT_NORMAL);
    HAL_PIN_Set(PAD_PA00, GPIO_A0, PIN_NOPULL, 1);
    BSP_GPIO_Set(TP_RESET_PIN, 1, 1);  //TP_RST
#else
    BSP_GPIO_Set(TP_RESET_PIN, 1, 1);  //TP_RST
#endif

}

void BSP_TP_PowerDown(void)
{
    //BSP_GPIO_Set(TP_RESET_PIN, 0, 1);
#if 0
    HAL_GPIO_DeInit(hwp_gpio1, TP_RESET_PIN);
    HAL_PIN_Set(PAD_PA00, GPIO_A0, PIN_NOPULL, 1);
    HAL_PIN_SetMode(PAD_PA00, 1, PIN_ANALOG_INPUT);
#else
    BSP_GPIO_Set(TP_RESET_PIN, 0, 1);
#endif
    BSP_GPIO_Set(TP_EN_PIN, 0, 1);
}

void BSP_QSPI_PowerUp(void)
{
    BSP_GPIO_Set(QSPI_POWER_PIN, 1, 1);
//    HAL_PIN_Set(PAD_PA60, QSPI2_CLK, PIN_NOPULL, 1);

    HAL_GPIO_DeInit(hwp_gpio1, 61);
    HAL_PIN_Set(PAD_PA61, QSPI2_CS, PIN_NOPULL, 1);
}

void BSP_QSPI_PowerDown(void)
{
//    HAL_PIN_Set(PAD_PA60, GPIO_A60, PIN_NOPULL, 1);
//    BSP_GPIO_Set(QSPI2_CLK_PIN, 0, 1);
//    BSP_GPIO_Set(QSPI_POWER_PIN, 0, 1);
#ifndef BSP_USING_EXT_PSRAM
    HAL_PIN_Set(PAD_PA37, GPIO_A37, PIN_NOPULL, 1);
    BSP_GPIO_Set(37, 1, 1);
#endif
    HAL_PIN_Set(PAD_PA61, GPIO_A61, PIN_NOPULL, 1);
    BSP_GPIO_Set(61, 1, 1);
}

void BSP_IO_Power_Down(int coreid, bool is_deep_sleep)
{
    int i;
#ifdef SOC_BF0_HCPU
    if (coreid == CORE_ID_HCPU)
    {
        //BSP_TP_PowerDown();
        //BSP_LCD_PowerDown();
        //BSP_QSPI_PowerDown();

        HAL_PIN_Set(PAD_PA10, I2C1_SCL, PIN_NOPULL, 1);
        HAL_PIN_Set(PAD_PA14, I2C1_SDA, PIN_NOPULL, 1);

        if (is_deep_sleep)
        {
#if defined (BSP_USING_PSRAM)
#if defined (BSP_USING_EXT_PSRAM)
            HAL_RCC_HCPU_DisableDLL3();
#endif

#endif
        }

        debug_lp();
    }
    else
    {
    }
#else
    //BSP_LCD_PowerDown();
#endif
}
